--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^4.7.0",
     "zod": "^4.0.14"
   },
   "devDependencies": {
